# pypargen

./: .gitignore  grammar.py  pyproject.toml  rule.py
examples/: ab_count.py  math.py
pypargen/: __init__.py  grammar.py  lexer.py  lr1.py  rule.py  token.py
pypargen/base/: grammar.py  lexer.py  parser.py  token.py
pypargen/grm/: __init__.py  fsm.py  grm_parser.py  parser.py
pypargen/lexer/: __init__.py  fsm.py  pyre.py
pypargen/lr1/: grammar.py  parser.py
tests/: test_grammar.py  test_lexer.py  test_lr1.py  test_rule.py  test_token.py
tests/base/: test_base_grammar.py
tests/grm/: grammar.grm  test_bootstrap.py  test_fsm.py
tests/lexer/: test_fsm.py  test_lexers.py  test_pyre.py
tests/lr1/: test_grammar.py  test_lr1_grammar.py  test_parser.py
