[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "pypargen"
requires-python = ">=3.9"
author = "Ilango Rajagopal"
author-email = "ilangokul@gmail.com"
home-page = "https://github.com/ilango100/pypargen"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
